# parcoursup

./: README.org  parcoursup.cabal
app/: Main.hs
