cabal-version:      2.4
name:               parcoursup
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Thibault Polge
maintainer:         thibault@thb.lt

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: []

executable parcoursup
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
                      containers >= 0.6.2.1,
    hs-source-dirs:   app
    default-language: Haskell2010
y